k8s/deployment.yaml
# Deploymento do MongoDB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:5.0.5
          ports:
            - containerPort: 27017
---
# Service do MongoDB

apiVersion: v1 
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb 
  ports:
  - port: 27017
  type: ClusterIP

---

# Deployment da aplicação web Rotten Potatoes

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: cmattos59/rotten-potatoes:v1
        ports:
        - containerPort: 5000
---
apiVersion: v1 
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30000
  type: NodePort
