k8s/ingress.yaml

# Ingress da aplicação rotten-potatoes
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  labels:
    name: web-ingress
spec:
  rules:
  - host: srv02.tce.ma.gov.br
    http:
      paths:
      - pathType: Prefix
        path: "/rotten-potatoes"
        backend:
          service:
            name: web
            port: 
              number: 5000
